openswan: remove obsolete kmod-ipv6 depends
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/openswan/Makefile
+++ b/net/openswan/Makefile
@@ -48,7 +48,7 @@ define KernelPackage/openswan
 $(call Package/openswan/Default)
   SUBMENU:=Network Support
   TITLE+= (kernel module)
-  DEPENDS+=+IPV6:kmod-ipv6 @LINUX_3_10||@LINUX_3_14||@LINUX_3_18 @!USE_MUSL
+  DEPENDS+=@LINUX_3_10||@LINUX_3_14||@LINUX_3_18 @!USE_MUSL
   FILES:=$(PKG_BUILD_DIR)/modobj*/ipsec.$(LINUX_KMOD_SUFFIX)
 endef
 
