ptrtd: remove obsolte kmod-ipv6 depends
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/ipv6/ptrtd/Makefile
+++ b/ipv6/ptrtd/Makefile
@@ -20,7 +20,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/ptrtd
   SECTION:=net
   CATEGORY:=Network
-  DEPENDS:=+kmod-ipv6 +kmod-tun +ip
+  DEPENDS:=+kmod-tun +ip
   TITLE:=Portable Transport Relay Translator Daemon
   URL:=http://v6web.litech.org/ptrtd/
 endef
