--- a/net/weechat/Makefile
+++ b/net/weechat/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=weechat
-PKG_VERSION:=1.3
+PKG_VERSION:=1.4
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
 PKG_SOURCE_URL:=http://www.weechat.org/files/src
-PKG_MD5SUM:=d315ceb66b03442ded0715f4277bd65f
+PKG_MD5SUM:=24e23908fc6fb4b55b86ead2c03aa8b3
 
 #PKG_FIXUP:=autoreconf
 
@@ -41,11 +41,13 @@ CMAKE_OPTIONS+= \
 	-DENABLE_GUILE=OFF \
 	-DENABLE_RUBY=OFF \
 	-DENABLE_TCL=OFF \
-	$(if $(CONFIG_BUILD_NLS),-DENABLE_NLS=OFF,-DENABLE_NLS=ON) \
+	$(if $(CONFIG_BUILD_NLS),-DENABLE_NLS:BOOL=ON,-DENABLE_NLS:BOOL=OFF) \
 	-DLIBINTL_INCLUDE:PATH="$(INTL_PREFIX)/include" \
-	-DLIBINTL_LIBRARY:PATH="$(INTL_PREFIX)/lib" \
+	$(if $(CONFIG_BUILD_NLS),-DLIBINTL_LIBRARY:PATH="$(INTL_PREFIX)/lib/libintl.so",) \
 	-DICONV_INCLUDE_PATH:PATH="$(ICONV_PREFIX)/include" \
-	-DICONV_LIBRARY:FILEPATH="$(ICONV_PREFIX)/lib/libiconv.so"
+	$(if $(CONFIG_BUILD_NLS),-DICONV_LIBRARY:FILEPATH="$(ICONV_PREFIX)/lib/libiconv.so",-DICONV_LIBRARY:FILEPATH="$(ICONV_PREFIX)/lib/libiconv.a")
+
+# -DICONV_LIBRARY:FILEPATH="$(ICONV_PREFIX)/lib/libiconv.so
 
 define Package/weechat/install
 	$(INSTALL_DIR) $(1)/usr/bin
