syslog-ng3: fix typo in configure option
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/admin/syslog-ng3/Makefile
+++ b/admin/syslog-ng3/Makefile
@@ -51,7 +51,7 @@ CONFIGURE_ARGS +=  \
 	--disable-glibtest \
 	--disable-spoof-source \
 	--disable-sql \
-	--enable-prce \
+	--enable-pcre \
 	--disable-linux-caps \
 
 TARGET_CPPFLAGS += \
