bahamut: fix configure option
old option generated unrecognized warning

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/bahamut/Makefile
+++ b/net/bahamut/Makefile
@@ -39,7 +39,7 @@ CONFIGURE_VARS+= \
 
 CONFIGURE_ARGS+= \
 		--with-maxconnections=64 \
-		--with-openssl="$(STAGING_DIR)/usr/lib"
+		--enable-openssl="$(STAGING_DIR)/usr/lib"
 
 define Build/Compile
 	$(call Build/Compile/Default,\
