uhub: add missing sqlite3 dependency
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/uhub/Makefile
+++ b/net/uhub/Makefile
@@ -22,7 +22,7 @@ define Package/uhub
   SUBMENU:=P2P
   SECTION:=net
   CATEGORY:=Network
-  DEPENDS:=+libevent +libopenssl
+  DEPENDS:=+libevent +libopenssl +libsqlite3
   TITLE:=High performance ADC hub
   URL:=http://www.extatic.org/uhub/
 endef
