peerguardian: update to 2.3.1
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/peerguardian/Makefile
+++ b/net/peerguardian/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=peerguardian
-PKG_VERSION:=2.2.2
+PKG_VERSION:=2.3.1
 PKG_RELEASE:=1
 
 PKG_SOURCE:=pgl-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=@SF/peerguardian
-PKG_MD5SUM:=
+PKG_MD5SUM:=c6e270c4892b01db88c5382230c71373
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/pgl-$(PKG_VERSION)
 PKG_BUILD_PARALLEL:=1
