cmus: update to 2.7.1 github repository
sourceforge is only keeping old versions

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/sound/cmus/Makefile
+++ b/sound/cmus/Makefile
@@ -9,17 +9,17 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=cmus
-PKG_VERSION:=2.5.0
-PKG_RELEASE:=5
+PKG_VERSION:=2.7.1
+PKG_SOURCE_VERSION:=d9bc784627db2ac3a9088bb9794199b5aca6ee68
 
-PKG_SOURCE:=$(PKG_NAME)-v$(PKG_VERSION).tar.bz2
-PKG_SOURCE_URL:=@SF/cmus
-PKG_MD5SUM:=9af16d324060447996ed25e1a9c1c7d8
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
+PKG_SOURCE_PROTO:=git
+PKG_SOURCE_URL:=https://github.com/cmus/cmus
+PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 
 PKG_BUILD_DEPENDS:=pulseaudio-daemon
 
 PKG_INSTALL:=1
-PKG_BUILD_DIR:=$(BUILD_DIR)/cmus-v$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/nls.mk
