facter: update to 3.1.8
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/admin/facter/Makefile
+++ b/admin/facter/Makefile
@@ -8,19 +8,21 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=facter
-PKG_VERSION:=1.7.0
+PKG_VERSION:=3.1.8
 PKG_RELEASE:=1
 
 PKG_SOURCE:=${PKG_NAME}-${PKG_VERSION}.tar.gz
 PKG_SOURCE_URL:=http://downloads.puppetlabs.com/facter/
-PKG_MD5SUM:=50dd278ad91a6d9266aeebf444ba1a71
+PKG_MD5SUM:=8e0789eb1d452388fdba9c2e46df9d54
 
 include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/cmake.mk
+include $(INCLUDE_DIR)/nls.mk
 
 define Package/facter
   SECTION:=admin
   CATEGORY:=Administration
-  DEPENDS:= +ruby +libruby +ruby-core +ruby-enc +ruby-yaml
+  DEPENDS:=+yaml-cpp +leatherman +boost-program_options +libblkid +libopenssl
   TITLE:=Collect and display facts about the system
   URL:=http://projects.puppetlabs.com/projects/facter
 endef
@@ -36,17 +38,12 @@ define Package/facter/description
  additional mechanisms for retrieving facts.
 endef
 
-define Build/Configure
-endef
-
-define Build/Compile
-endef
 
 define Package/facter/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/bin/$(PKG_NAME) $(1)/usr/bin/
-	$(INSTALL_DIR) $(1)/usr/lib/ruby/1.9/facter
-	$(CP) $(PKG_BUILD_DIR)/lib/* $(1)/usr/lib/ruby/1.9/
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/$(PKG_NAME) $(1)/usr/bin/
+	$(INSTALL_DIR) $(1)/usr/lib/
+	$(CP) $(PKG_INSTALL_DIR)/usr/lib/* $(1)/usr/lib
 endef
 
 $(eval $(call BuildPackage,facter))
