imagemagick: disable some autoconf dependencies
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/multimedia/imagemagick/Makefile
+++ b/multimedia/imagemagick/Makefile
@@ -91,6 +91,9 @@ CONFIGURE_ARGS += \
 	--without-bzlib \
 	--without-freetype \
 	--without-fontconfig \
+	--without-jbig \
+	--without-lcms \
+	--without-lcms2 \
 	--without-rsvg \
 	--without-fftw \
 	--without-xml \
