sysprof: disable on arm64/aarch64
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/devel/sysprof/Makefile
+++ b/devel/sysprof/Makefile
@@ -33,7 +33,7 @@ define Package/sysprof
   CATEGORY:=Development
   TITLE:=Sysprof System Profiler
   URL:=http://sysprof.com
-  DEPENDS:=+glib2
+  DEPENDS:=+glib2 @!TARGET_arm64
 endef
 
 
