heyu: update to git repo
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/utils/heyu/Makefile
+++ b/utils/heyu/Makefile
@@ -8,12 +8,20 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=heyu
-PKG_VERSION:=2.10
-PKG_RELEASE:=1
+PKG_VERSION:=2.11git
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=http://heyu.tanj.com/download/
-PKG_MD5SUM:=62e18dc65a5a6f30668243367c68dde7
+
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_REVISION).tar.gz
+PKG_SOURCE_URL:=https://github.com/HeyuX10Automation/heyu
+PKG_SOURCE_PROTO:=git
+PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+PKG_SOURCE_VERSION:=194c2022d7cfe180177a3a8986ad5c1b187f8bd5
+PKG_RELEASE:=$(PKG_SOURCE_VERSION)
+
+PKG_LICENSE:=
+PKG_LICENSE_FILES:=
+
+PKG_FIXUP:=autoreconf
 
 include $(INCLUDE_DIR)/package.mk
 
